	for number content.

2010-04-28  Christian Egli  <christian.egli@sbszh.ch>

	* org-taskjuggler.el (org-taskjuggler-find-task-with-id): Do not
	use the ID property frivolously, i.e. use a property named
	"task_id" instead as we do not search for ids across files.
	(org-taskjuggler-resolve-explicit-dependencies): Issue a warning
	if a dependency cannot be resolved.

2010-04-28  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-latex.el (org-export-latex-treat-sub-super-char): Make
	sure parenthesis matching is consistent.

	* org-table.el (org-table-colgroup-line-p)
	(org-table-cookie-line-p): New functions.

	* org-exp.el (org-table-clean-before-export): Better tests for
	colgroup and cookie lines.

2010-04-27  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-agenda.el (org-agenda-goto): Push a mark before changing
	the position.

	* org-footnote.el (org-footnote): New group.
	(org-footnote-section)
	(org-footnote-tag-for-non-org-mode-files): Fix typos.

	* org-list.el (org-end-of-item-text-before-children): Also do
	the right thing at the end of a file.

	* org.el (org-set-packages-alist, org-get-packages-alist): New
	function.
	(org-export-latex-default-packages-alist)
	(org-export-latex-packages-alist): Add extra flag to
	each package, indicating if it should be used for snippets.
	(org-create-formula-image): Add the snippet argument.
	(org-splice-latex-header): New argument SNIPPET-P, pass it
	through to `org-latex-packages-to-string'.
	(org-latex-packages-to-string): New argument SNIPPET-P.

	* org-latex.el (org-export-latex-make-header): Add the snippet
	argument.

	* org-docbook.el (org-export-as-docbook): Implement ordered
	lists starting at some offset.

2010-04-26  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-link-types, org-open-at-point): Add doi links.

	* org-ascii.el (org-export-ascii-preprocess): Remove list
	startcounter cookies.

	* org-list.el (org-renumber-ordered-list): Respect counter
	start values.
